# gtest_start

./: .clangd  .gitignore  gtest_start.cpp
gmock_start/: CMakeLists.txt  logger.h  mock_logger.h
gmock_start/test/: test_logger.cpp
